 * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
 * Add Learn Wagtail to third-party tutorials in documentation (Matt Westcott)
 * Add a Django setting `TAG_LIMIT` to limit number of tags that can be added to any taggit model (Mani)
 * Added instructions on how to generate urls for `ModelAdmin` to documentation (LB (Ben Johnston), Andy Babic)
 * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
 * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
 * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
 * Fix: Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
 * Fix: Escape backslashes in `postgres_search` queries (Hammy Goonan)
 * Fix: Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
 * Fix: `routablepageurl` tag now correctly omits domain part when multiple sites exist at the same root (Gassan Gousseinov)
 * Fix: Added missing collection column specifier on document listing template (Sergey Fedoseev)
 * Fix: Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
 * Fix: Admin HTML header now includes correct language code (Matt Westcott)
 * Fix: Unclear error message when saving image after focal point edit (Hugo van den Berg)
 * Fix: `send_mail` now correctly uses the `html_message` kwarg for HTML messages (Tiago Requeijo)
 * Fix: Page copying no longer allowed if page model has reached its `max_count` (Andy Babic)
 * Fix: Don't show page type on page chooser button when multiple types are allowed (Thijs Kramer)


2.4 (19.12.2018)
~~~~~~~~~~~~~~~~

 * Added support for Python 3.7 (Matt Westcott)
 * Added `max_count` option on page models to limit the number of pages of a particular type that can be created (Dan Braghis)